Fix bug 1357919: Right-align RTL text

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1087,6 +1087,7 @@ body > header aside p {
   display: none;
   font-style: italic;
   padding-left: 2%;
+  text-align: start;
 }
 
 #entitylist > .wrapper > ul > li p span.translation-string[lang="mk"],
@@ -1190,6 +1191,7 @@ body > header aside p {
 #editor p#original,
 #editor p.original,
 #editor p.translation {
+  text-align: start;
   white-space: pre-wrap;
 }
 
